# ir-collector

./: Cargo.toml  README.md
src/: command.rs  lib.rs  main.rs  utils.rs
src/collector/: mod.rs  network.rs  process.rs  system_info.rs  user.rs
